prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/syntax_errors/expected_token_paren.nut
// EXPECT_ERROR: "expected ')'"
if (true {
